fix home page news spacing

--- a/styles/HomeLayout.module.scss
+++ b/styles/HomeLayout.module.scss
@@ -183,17 +183,17 @@
 
       padding: 0.5em;
       margin: 0.1em;
-
       display: flex;
       flex-direction: column;
       @media only screen and (min-width: 700px) {
         width: 20em;
+        gap: 0.5em;
       }
       h4 {
         color: rgb(83, 83, 83);
         font-size: 1em;
         @media only screen and (min-width: 700px) {
-          text-align: center;
+          // text-align: center;
         }
       }
       .image {
